[gd_scene load_steps=13 format=3 uid="uid://day0p74kiaj13"]

[ext_resource type="PackedScene" uid="uid://dsgvpxp0f35do" path="res://scenes/machines/interactable_component.tscn" id="1_bmqb7"]
[ext_resource type="Shader" path="res://scenes/machines/machine_selection.gdshader" id="1_g1lqu"]
[ext_resource type="Script" path="res://scenes/machines/charger/charger.gd" id="1_oyxca"]
[ext_resource type="Texture2D" uid="uid://dickcl4u3wcmd" path="res://assets/machines/charger.png" id="1_t02n8"]
[ext_resource type="PackedScene" uid="uid://b24lajp77bfi6" path="res://scenes/ui/control_menu/control_menu.tscn" id="4_8h484"]
[ext_resource type="FontFile" uid="uid://dk4gdruibe4ps" path="res://assets/ui/zx_palm.ttf" id="5_5y36x"]
[ext_resource type="PackedScene" uid="uid://cn0ja50u1boe" path="res://scenes/machines/breackable_component.tscn" id="7_28pqd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_abo0h"]
shader = ExtResource("1_g1lqu")
shader_parameter/is_enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uu11u"]
size = Vector2(32, 10)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xuupb"]
load_path = "res://.godot/imported/ui_icons.png-ba95d9fa9c0eef28aec73f493d978e3b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_pogfr"]
atlas = SubResource("CompressedTexture2D_xuupb")
region = Rect2(18, 16, 12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m5rr"]
size = Vector2(38, 37)

[node name="Charger" type="StaticBody2D" node_paths=PackedStringArray("breakable_component")]
y_sort_enabled = true
collision_mask = 3
script = ExtResource("1_oyxca")
breakable_component = NodePath("BreackableComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_abo0h")
position = Vector2(0, -6)
texture = ExtResource("1_t02n8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uu11u")

[node name="ControlMenu" parent="." instance=ExtResource("4_8h484")]
visible = false
offset_left = -38.0
offset_top = -55.0
offset_right = 45.0
offset_bottom = -15.0

[node name="ChargerIcon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -11.0
offset_top = -35.0
offset_right = 3.0
offset_bottom = -19.0

[node name="Icon" type="TextureRect" parent="ChargerIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_pogfr")
expand_mode = 4
stretch_mode = 3

[node name="Label" type="Label" parent="ChargerIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 0
offset_left = -6.0
offset_top = 3.0
offset_right = 22.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_5y36x")
theme_override_font_sizes/font_size = 6
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="InteractableComponent" parent="." instance=ExtResource("1_bmqb7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_2m5rr")
debug_color = Color(0.642092, 0.522067, 0.114012, 0.42)

[node name="BreackableComponent" parent="." node_paths=PackedStringArray("control_menu") instance=ExtResource("7_28pqd")]
control_menu = NodePath("../ControlMenu")

[connection signal="interactable_activated" from="InteractableComponent" to="." method="_on_interactable_activated"]
[connection signal="interactable_deactivated" from="InteractableComponent" to="." method="_on_interactable_deactivated"]
